--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="i清靜 靜音艙提供您舒適獨立優享空間，絕佳降噪提高運用效率，線上預約即可立即體驗…"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>智慧多元應用艙預約系統</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
